--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -4,5 +4,6 @@
     margin-right: 5px;
     background-color: black;
     border-radius: 100%;
-    color: gold;
+    color: white;
+    text-decoration: none;
 }
