--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,8 @@
 .footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #333;
     color: aliceblue;
-    text-align: center;
-    padding: 5px 0;
+    height: 50px;
 }
