--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -10,12 +10,14 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    background-color:antiquewhite;
+    background-color: rgb(219, 185, 141);
+    padding: 5px 0;
 }
 
 .options {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     list-style: none;
 }
 
@@ -26,11 +28,24 @@
 
 .logo{
     cursor: pointer;
-    background-color: black;
-    border-radius: 100%;
+    background-color: whitesmoke;
     margin-right: 5px;
+    border-radius: 100%;
+    background-color: black;
 }
 
-.brand{
+.inactive {
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    text-transform: uppercase;
+
+}
+
+.active {
+    font-weight: 500;
     color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+
 }
